# cc-ftp

./: Cargo.toml
cc/config/: global.json
src/: auth.rs  main.rs  user.rs
